Update index.html with words from October 6

--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
         
         <div class="score-board">
             <div>Score: <span id="score">0</span></div>
-            <div>Words Left: <span id="wordsLeft">15</span></div>
+            <div>Words Left: <span id="wordsLeft">16</span></div>
             <div>Hints Used: <span id="hintsUsed">0</span></div>
         </div>
 
@@ -326,79 +326,84 @@
         const GameState = {
             words: [
                 { 
-                    word: 'furrowed', 
-                    meaning: 'With deep lines or wrinkles, especially on the forehead when worried or thinking',
-                    initialLetters: [0, 4] // Show 'f' and 'o'
+                    word: 'snitch', 
+                    meaning: 'Someone who tells on others; to inform',
+                    initialLetters: [0, 3] // Show 's' and 't'
                 },
                 { 
-                    word: 'sinister', 
-                    meaning: 'Evil or harmful; suggesting something bad will happen',
-                    initialLetters: [0, 5] // Show 's' and 't'
+                    word: 'gaze', 
+                    meaning: 'To look steadily and intently',
+                    initialLetters: [0, 2] // Show 'g' and 'z'
                 },
                 { 
-                    word: 'unfurling', 
-                    meaning: 'Opening or spreading out from a rolled or folded position',
-                    initialLetters: [0, 3] // Show 'u' and 'u'
+                    word: 'unnerved', 
+                    meaning: 'To make someone feel nervous or afraid',
+                    initialLetters: [0, 4] // Show 'u' and 'e'
                 },
                 { 
-                    word: 'exhale', 
-                    meaning: 'To breathe out',
-                    initialLetters: [0, 3] // Show 'e' and 'a'
+                    word: 'guffaw', 
+                    meaning: 'A loud and boisterous laugh',
+                    initialLetters: [0, 3] // Show 'g' and 'f'
                 },
                 { 
-                    word: 'pang', 
-                    meaning: 'A sudden sharp feeling of pain or emotion',
-                    initialLetters: [0, 2] // Show 'p' and 'n'
+                    word: 'trudge', 
+                    meaning: 'To walk slowly and with heavy steps',
+                    initialLetters: [0, 3] // Show 't' and 'd'
                 },
                 { 
-                    word: 'jummah', 
-                    meaning: 'The Friday prayer service in Islam; Muslim day of congregational prayer',
-                    initialLetters: [0, 3] // Show 'j' and 'm'
+                    word: 'blurt', 
+                    meaning: 'To say something suddenly and without thinking',
+                    initialLetters: [0, 2] // Show 'b' and 'u'
                 },
                 { 
-                    word: 'dispel', 
-                    meaning: 'To make something disappear or go away, especially a belief or feeling',
-                    initialLetters: [0, 3] // Show 'd' and 'p'
+                    word: 'sullen', 
+                    meaning: 'Gloomy or silently moody',
+                    initialLetters: [0, 3] // Show 's' and 'l'
                 },
                 { 
-                    word: 'foyer', 
-                    meaning: 'An entrance hall or lobby in a building',
-                    initialLetters: [0, 2] // Show 'f' and 'y'
+                    word: 'clench', 
+                    meaning: 'To close tightly, especially the hands or teeth',
+                    initialLetters: [0, 4] // Show 'c' and 'n'
                 },
                 { 
-                    word: 'smirk', 
-                    meaning: 'A smug, conceited, or silly smile',
-                    initialLetters: [0, 3] // Show 's' and 'r'
+                    word: 'fiasco', 
+                    meaning: 'A complete and embarrassing failure',
+                    initialLetters: [0, 3] // Show 'f' and 's'
                 },
                 { 
-                    word: 'devour', 
-                    meaning: 'To eat something quickly and hungrily; to consume eagerly',
-                    initialLetters: [0, 3] // Show 'd' and 'o'
+                    word: 'crescents', 
+                    meaning: 'Shapes resembling a curved moon',
+                    initialLetters: [0, 4] // Show 'c' and 'c'
                 },
                 { 
-                    word: 'wafting', 
-                    meaning: 'Moving gently through the air; carrying on the breeze',
-                    initialLetters: [0, 3] // Show 'w' and 't'
+                    word: 'flourishes', 
+                    meaning: 'Bold or extravagant gestures or actions',
+                    initialLetters: [0, 5] // Show 'f' and 'i'
                 },
                 { 
-                    word: 'omniscient', 
-                    meaning: 'Knowing everything; having unlimited knowledge',
-                    initialLetters: [0, 5] // Show 'o' and 'c'
+                    word: 'grimace', 
+                    meaning: 'A facial expression showing pain or disgust',
+                    initialLetters: [0, 4] // Show 'g' and 'a'
                 },
                 { 
-                    word: 'drab', 
-                    meaning: 'Dull and lacking brightness or interest; dreary',
-                    initialLetters: [0, 2] // Show 'd' and 'a'
+                    word: 'muff', 
+                    meaning: 'To handle something clumsily or fail to do it properly',
+                    initialLetters: [0, 2] // Show 'm' and 'f'
                 },
                 { 
-                    word: 'stifle', 
-                    meaning: 'To stop something from happening or developing; to suppress',
-                    initialLetters: [0, 3] // Show 's' and 'f'
+                    word: 'surges', 
+                    meaning: 'Sudden powerful forward or upward movements',
+                    initialLetters: [0, 3] // Show 's' and 'g'
                 },
                 { 
-                    word: 'pungent', 
-                    meaning: 'Having a strong, sharp smell or taste',
-                    initialLetters: [0, 3] // Show 'p' and 'g'
+                    word: 'waver', 
+                    meaning: 'To be undecided or to shake slightly',
+                    initialLetters: [0, 2] // Show 'w' and 'v'
+                },
+                { 
+                    word: 'linger', 
+                    meaning: 'To stay in a place longer than necessary',
+                    initialLetters: [0, 3] // Show 'l' and 'g'
                 }
             ],
             currentWordIndex: 0,
